@@ -28,6 +28,7 @@ Current Devel
 	- Chakora: Deleted $Chakora::LINKD as sidInfo provides this data.
 	- Modules: Added operserv/modreload for reloading modules.
 	- Protocols: If a server spltis, delete all servers that it acts hub to, along with their users.
+	- API: Added event_chgident() and event_chghost()
 
 1.0.0-alpha2
 	- HostServ: Update hostserv/main to match the updated API.
